1.16.5, separate AP from the rest